--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/client/admin/roots/app.js": "/js/client/admin/roots/app.js?id=d4eb81a99561e427b8f7",
-    "/js/client/frontend/roots/projects.js": "/js/client/frontend/roots/projects.js?id=3a92e75fa2595fa3e736",
-    "/js/client/frontend/roots/error.js": "/js/client/frontend/roots/error.js?id=8efc8afbc5b3ecccc668"
+    "/js/client/admin/roots/app.js": "/js/client/admin/roots/app.js",
+    "/js/client/frontend/roots/projects.js": "/js/client/frontend/roots/projects.js",
+    "/js/client/frontend/roots/error.js": "/js/client/frontend/roots/error.js"
 }
