Add Module for Publications in Panel Admin and Frontend Succesfull

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/client/admin/roots/app.js": "/js/client/admin/roots/app.js",
-    "/js/client/frontend/roots/projects.js": "/js/client/frontend/roots/projects.js",
-    "/js/client/frontend/roots/error.js": "/js/client/frontend/roots/error.js"
+    "/js/client/admin/roots/app.js": "/js/client/admin/roots/app.js?id=b0cfd6a9050b91fbba56",
+    "/js/client/frontend/roots/projects.js": "/js/client/frontend/roots/projects.js?id=c57e7f5711419c0dc7b1",
+    "/js/client/frontend/roots/error.js": "/js/client/frontend/roots/error.js?id=8efc8afbc5b3ecccc668"
 }
