Intalling LaRecipe Docuemntation-Markdown Version 1.0

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-ide-helper": "^2.9",
+        "binarytorch/larecipe": "^2.5",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -17,7 +19,6 @@
         "laravel/framework": "^8.65",
         "laravel/tinker": "^2.5",
         "rap2hpoutre/laravel-log-viewer": "^1.7",
-        "barryvdh/laravel-ide-helper": "^2.9",
         "stevebauman/location": "^6.1",
         "tymon/jwt-auth": "^1.0"
     },
